# FQPlanner

./: .gitignore  CLAUDE.md  Claude.md  MUJOCO_LOG.TXT  README.md  dump.rdb  findings.md  plan.md  progress.md  pyproject.toml  requirements.txt  task_plan.md  usage.md
Agent/: README.md
assets/: config.yaml
bench/: PERHOME_TESTBED_SPEC.md  README.md  capture_quad_timeline.py  capture_task.py  curve_results.csv  drift_mujoco.csv  drift_results.csv  drift_seg_scan.csv  drift_seg_scan_full.csv  drift_segmentation.csv  eval_drift.py  eval_drift_mujoco.py  eval_speedup_container.py  extract_traces.py  plot_curve.py  plot_repeat.py  repeat_results.csv  run_curve.py  run_home.py  run_home_llm.py  run_once.py  run_repeat.py  verify_phase1.py  verify_phase2.py
christine/: RESUME.md
deploy/: README.md  run.py
docker/: build.sh  run.sh
master/: README.md  config.yaml  run.py
nav2/: Dockerfile  README.md  bridge_node.py  check_map_point.py  config.yaml  docker-compose.yml  export_free_points.py  free_points_generator.py  launch.sh  map_generator.py  nav2_params.yaml  pandaomron.urdf  rviz_config.rviz  select_waypoints.py  workpoints_generator.py
robot_api/: __init__.py  client.py  config.py  config.yaml  contract.md  runtime.py  scene_memory.py  scene_metadata.py
serve/: README.md  get_scene_data.py  main.py  mjmodel.xml  mujoco_backend.py  omnigibson_server.py  profile.yaml  requirements.txt  scene_objects.json  sim.py  test_external_camera.py
serve_3dgs/: README.md  demo.py  main.py  requirements_3dgs.txt
serve_alfworld/: README.md  alf_env.py  main.py  server.py  shadow_state.py
serve_real/: README.md  __init__.py  base_bridge.py  config.yaml
services/: act_server.py  pi05_server.py
slaver/: README.md  config.yaml  run.py
teleop/: keyboard_control.py  run.sh
tests/: test_master_agent_features.py  test_scene_memory.py  test_sim_env_cameras.py  test_viewer_screens.py
tools/: operation_object_parameters.csv  prepare_bag_convex_demo.py  (+5 more)
(+289 files in other folders)
