[project]
name = "fqplanner"
version = "0.1.0"
description = "LLM-driven embodied task planning system with MuJoCo simulation and 3DGS scene rendering"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    # --- Core (与 GS-Playground 一致) ---
    "motrixsim_core==0.7.1.dev97295",
    "torch==2.7.0+cu128",
    "gaussian_renderer==0.2.0",
    "gsplat==1.5.3",
    "numpy==2.2.6",
    "scipy==1.15.3",
    "plyfile==1.1.3",
    "mediapy==1.2.6",
    "matplotlib==3.10.9",
    "ipykernel==7.2.0",
    "nbconvert>=7.16",
    "onnxruntime==1.22.1",
    "packaging==25.0",
    "setuptools==80.9.0",
    "wheel==0.45.1",
    "ninja==1.13.0",
    "rich==15.0.0",
    "pyrender>=0.1.45",
    # --- Web/API ---
    "flask==3.1.1",
    "flask-cors==6.0.1",
    "Flask-SocketIO==5.5.1",
    "mcp==1.10.1",
    # --- AI/LLM ---
    "openai==2.15.0",
    "python-dotenv==0.21.0",
    # --- ML/Embeddings ---
    "sentence-transformers==2.5.1",
    "scikit-learn==1.5.2",
    "mujoco>=3.2",
    # --- Data/Config ---
    "PyYAML==6.0.2",
    "redis==5.2.1",
    # --- Terminal/UI ---
    "psutil==7.0.0",
    # --- Image ---
    "pillow==11.2.1",
    # --- Core ---
    "pyserial",
    # --- Motor drivers ---
    "deepdiff",
    "tqdm",
    # --- ACT training ---
    "einops>=0.8.0",
    "h5py>=3.10.0",
    "opencv-python",
]

[[tool.uv.index]]
name = "pypi-tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "motphys-pypi"
url = "https://pypi.motphys.com/simple/"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
motrixsim_core = { index = "motphys-pypi" }
torch = { index = "pytorch-cu128" }

[tool.uv]
package = false
prerelease = "allow"
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
